# VacuumSystem

./: .gitignore  README.md
Monitor/: CMakeLists.txt  main.cpp  settings.json
Monitor/include/: TCommTPG.hpp  TDataUploader.hpp
Monitor/src/: TCommTPG.cpp  TDataUploader.cpp
